# project_management_system

./: .env  Cargo.toml  diesel.toml
src/: auth.rs  lib.rs  main.rs  models.rs  repositories.rs  schema.rs
src/migrations/000_init/: up.sql
src/repositories/: auth_repo  auth_repo.rs  mod.rs  project_repo.rs  task_repo.rs  user_repo.rs
tests/: integration_tests.rs  repository_tests.rs
