[package]
name = "project_management_system"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0"
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
