[package]
name = "project_management_system"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
r2d2 = "0.8"

[dev-dependencies]
fake = { version = "2.4", features = ["derive"] }
bcrypt = "0.15"